--- a/Scripts/Runtime/Ui/Localization.uss
+++ b/Scripts/Runtime/Ui/Localization.uss
@@ -15,6 +15,12 @@
     -unity-font-definition: resource('Bitter/Bitter-Medium SDF');
 }
 
+.localized-text-element--black {
+    color: rgb(45, 44, 44);
+    -unity-font: resource('Bitter/Bitter-Medium');
+    -unity-font-definition: resource('Bitter/Bitter-Medium SDF');
+}
+
 .localized-text-element--h1 {
     font-size: 42px;
     letter-spacing: -4px;
